--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "name": "Peter Grassberger aka. PeterTheOne",
             "email": "petertheone@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": { "LqfbPhpApi": "." }
+    }
 }
