--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
         "psr-0": {
             "LiquidFeedback": "."
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.1.*",
+        "phpunit/dbunit": "1.3.*"
     }
 }
