--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
             "LiquidFeedback": "."
         }
     },
+    "require": {
+        "lichtner/fluentpdo": "dev-master"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
         "phpunit/dbunit": "1.3.*"
